--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </div>
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".1s">
                                 <article class="box-icon-modern box-icon-modern-2">
-                                    <div class="box-icon-modern-icon linearicons-user"></div>
+                                    <div class="box-icon-modern-icon linearicons-bubble-pencil"></div>
                                     <h5 class="box-icon-modern-title">Nosso<br>Objetivo?</h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">Estamos aqui para poder te ajudar com sua escolha no mercado de trabalho</p>
@@ -99,7 +99,7 @@
                             </div>
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".2s">
                                 <article class="box-icon-modern box-icon-modern-2">
-                                    <div class="box-icon-modern-icon linearicons-headset"></div>
+                                    <div class="box-icon-modern-icon linearicons-bubble-question"></div>
                                     <h5 class="box-icon-modern-title">Como isso<br>Funciona?</h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">É bem simles, ao ficarmos sabendo de alguma vaga de emprego nós a colocamos em nosso site para voçê.</p>
@@ -107,8 +107,8 @@
                             </div>
                             <div class="col-sm-6 wow fadeInRight" data-wow-delay=".3s">
                                 <article class="box-icon-modern box-icon-modern-2">
-                                    <div class="box-icon-modern-icon linearicons-outbox"></div>
-                                    <h5 class="box-icon-modern-title">Oque faço<br>Se ela me interessar?</h5>
+                                    <div class="box-icon-modern-icon linearicons-bubble-alert"></div>
+                                    <h5 class="box-icon-modern-title">O que fazer<br>Se uma vaga me interessar?</h5>
                                     <div class="box-icon-modern-decor"></div>
                                     <p class="box-icon-modern-text">Basta você clicar na oferta e preencher nosso formulario de envio do curriculo, é bem simples</p>
                                 </article>
@@ -361,7 +361,7 @@
                     <div class="col-sm-8 col-md-6 col-lg-4">
                         <article class="box-contacts">
                             <div class="box-contacts-body">
-                                <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
+                                <div class="box-contacts-icon linearicons-telephone"></div>
                                 <div class="box-contacts-decor"></div>
                                 <p class="box-contacts-link legend-contact">Telefone</p>
                                 <br>
@@ -372,18 +372,19 @@
                     <div class="col-sm-8 col-md-6 col-lg-4">
                         <article class="box-contacts">
                             <div class="box-contacts-body">
-                                <div class="box-contacts-icon fl-bigmug-line-up104"></div>
+                                <div class="box-contacts-icon linearicons-map-marker"></div>
                                 <div class="box-contacts-decor"></div>
-                                <p class="box-contacts-link legend-contact">Nosso Endereço</p>
+                                <p class="box-contacts-link legend-contact">Local</p>
                                 <br>
                                 <p class="box-contacts-link">Rua São Pedro, 330, Vila Perin. Lins/SP</p>
+                                <a href="https://goo.gl/maps/x1bmLirVZyFqs8LT8" class="rd-nav-link">Como chegar:</a>
                             </div>
                         </article>
                     </div>
                     <div class="col-sm-8 col-md-6 col-lg-4">
                         <article class="box-contacts">
                             <div class="box-contacts-body">
-                                <div class="box-contacts-icon fl-bigmug-line-chat55"></div>
+                                <div class="box-contacts-icon linearicons-envelope"></div>
                                 <div class="box-contacts-decor"></div>
                                 <p class="box-contacts-link legend-contact">Email</p>
                                 <br>
