--- a/form-envio.html
+++ b/form-envio.html
@@ -56,11 +56,7 @@
                                         </div>
                                         <ul class="rd-navbar-nav">
                                             <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a></li>
-                                            <li class="rd-nav-item active"><a class="rd-nav-link" href="#Form">Formulario de envio</a></li>
-                                            <li class="rd-nav-item"><a class="rd-nav-link" href="#descrição">Descrição</a></li>
-                                            <li class="rd-nav-item"><a class="rd-nav-link" href="#projects">Vagas disponiveis</a></li>
-                                            <li class="rd-nav-item"><a class="rd-nav-link" href="#Empresas">Empresas Parceiras</a></li>
-                                            <li class="rd-nav-item"><a class="rd-nav-link" href="#contacts">Contato</a></li>
+                                            <li class="rd-nav-item active"><a class="rd-nav-link" href="#Form">Informações</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -77,39 +73,6 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-6">
-                    <div class="container-fluid">
-                        <form class="rd-form rd-form-variant-2 rd-mailform">
-                            <div class="row row-14 gutters-14">
-                                <div class="col-4">
-                                    <div class="form-wrap">
-                                        <input class="form-input" id="contact-your-name-2" type="text" name="name" data-constraints="@Required">
-                                        <label class="form-label" for="contact-your-name-2">Your Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <div class="form-wrap">
-                                        <input class="form-input" id="contact-email-2" type="email" name="email" data-constraints="@Email @Required">
-                                        <label class="form-label" for="contact-email-2">E-mail</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-wrap">
-                                        <label class="form-label" for="contact-message-2">Message</label>
-                                        <textarea class="form-input textarea-lg" id="contact-message-2" name="message" data-constraints="@Required"></textarea>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-wrap">
-                                        <label>Anexe seu curriculo</label>
-                                        <input type="file" id="arquivo" name="arquivo">
-                                    </div>
-                                </div>
-                            </div>
-                            <button class="button button-primary button-pipaluk mb-3" type="submit">Enviar Curriculo</button>
-                        </form>
-                    </div>
-                </div>
                 <div class="col-12 col-sm-6 col-md-6 mt-3">
                     <div class="info text-left">
                         <h3 class="sub-title mb-2">informações da vaga</h3>
@@ -121,59 +84,91 @@
                         <h4 class="infos2"><b class="infos">Cesta basica:</b> não disponivel</h4>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="container" id="descrição">
-            <div class="row">
-                <div class="col-12">
-                    <h3 class="text-left mt-5">Descrição da vaga</h3>
-                    <h5 class="text-left mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio omnis quia sed atque, aspernatur neque nam dolorum aliquam architecto sunt unde quam praesentium doloremque laborum ipsam perferendis quae vero. Saepe?</h5>
-                </div>
-                <div class="col-12">
-                    <h3 class="text-left mt-5">Descrição dos cargos</h3>
-                    <h5 class="text-left mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio omnis quia sed atque, aspernatur neque nam dolorum aliquam architecto sunt unde quam praesentium doloremque laborum ipsam perferendis quae vero. Saepe?</h5>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="section section-fluid footer-minimal bg-footer context-dark">
-        <div class="container-fluid">
-            <div class="footer-minimal-inset oh">
-                <ul class="footer-list-category-2">
-                    <li><a href="https://www.eteclins.com.br/2022/">Etec de Lins</a></li>
-                    <li><a href="#">Windows/Mac OS Apps</a></li>
-                    <li><a href="#">Android/iOS Apps</a></li>
-                    <li><a href="#">Cloud Solutions</a></li>
-                    <li><a href="#">Customer Support</a></li>
-                </ul>
-            </div>
-            <div class="footer-minimal-bottom-panel text-sm-left">
-                <div class="row row-10 align-items-md-center">
-                    <div class="col-sm-6 col-md-4 text-sm-right text-md-center">
-                        <div>
-                            <ul class="list-inline list-inline-sm footer-social-list-2">
-                                <li>
-                                    <a class="icon fa fa-facebook" href="#"></a>
-                                </li>
-                                <li>
-                                    <a class="icon fa fa-google-plus" href="#"></a>
-                                </li>
-                                <li>
-                                    <a class="icon fa fa-instagram" href="#"></a>
-                                </li>
-                            </ul>
+                <div class="col-12 col-sm-6 col-md-6">
+                    <div class="container-fluid">
+                        <div class="col-12">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                Entrar em contato
+                            </button>
+
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Entre em contato pelo email abaixo:</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body ">
+                                            <article class="box-contacts">
+                                                <div class="box-contacts-body">
+                                                    <div class="box-contacts-icon linearicons-envelope"></div>
+                                                    <div class="box-contacts-decor"></div>
+                                                    <p class="box-contacts-link legend-contact">Email</p>
+                                                    <br>
+                                                    <p class="box-contacts-link"><a href="mailto:#">e148.dir@cps.sp.gov.br</a></p>
+                                                </div>
+                                            </article>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 order-sm-first">
-                        <!-- Rights-->
-                        <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>EmpreTec</span>
-                        </p>
+                </div>
+            </div>
+            <div class="container" id="descrição">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="text-left mt-5">Descrição da vaga</h3>
+                        <h5 class="text-left mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio omnis quia sed atque, aspernatur neque nam dolorum aliquam architecto sunt unde quam praesentium doloremque laborum ipsam perferendis quae vero. Saepe?</h5>
+                    </div>
+                    <div class="col-12">
+                        <h3 class="text-left mt-5">Descrição dos cargos</h3>
+                        <h5 class="text-left mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio omnis quia sed atque, aspernatur neque nam dolorum aliquam architecto sunt unde quam praesentium doloremque laborum ipsam perferendis quae vero. Saepe?</h5>
                     </div>
                 </div>
             </div>
         </div>
+        <footer class="section section-fluid footer-minimal bg-footer context-dark">
+            <div class="container-fluid">
+                <div class="footer-minimal-inset oh">
+                    <ul class="footer-list-category-2">
+                        <li><a href="https://www.eteclins.com.br/2022/">Etec de Lins</a></li>
+                        <li><a href="#">Windows/Mac OS Apps</a></li>
+                        <li><a href="#">Android/iOS Apps</a></li>
+                        <li><a href="#">Cloud Solutions</a></li>
+                        <li><a href="#">Customer Support</a></li>
+                    </ul>
+                </div>
+                <div class="footer-minimal-bottom-panel text-sm-left">
+                    <div class="row row-10 align-items-md-center">
+                        <div class="col-sm-6 col-md-4 text-sm-right text-md-center">
+                            <div>
+                                <ul class="list-inline list-inline-sm footer-social-list-2">
+                                    <li>
+                                        <a class="icon fa fa-facebook" href="#"></a>
+                                    </li>
+                                    <li>
+                                        <a class="icon fa fa-google-plus" href="#"></a>
+                                    </li>
+                                    <li>
+                                        <a class="icon fa fa-instagram" href="#"></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 order-sm-first">
+                            <!-- Rights-->
+                            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>EmpreTec</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-    </footer>
+        </footer>
     </div>
 
 
