--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <!-- Thumbnail Classic-->
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Desenvolvimento d</h5>
+                                <h5 class="card-title">Desenvolvimento de Sistemas</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
@@ -278,12 +278,12 @@
             <div class="container-fluid">
                 <h2>Alguns de nossos usuarios</h2>
                 <div class="row row-50 row-sm">
-                    <div class="col-md-6 col-xl-4 wow fadeInRight">
+                    <div class="col-md-5 col-xl-4 wow fadeInRight">
                         <!-- Quote Modern-->
                         <article class="quote-modern quote-modern-custom">
                             <div class="unit unit-spacing-md align-items-center">
                                 <div class="unit-left">
-                                    <a class="quote-modern-figure" href="#"><img class="img-circles" src="images/incon.jpg" alt="" width="75" height="75" /></a>
+                                    <a class="quote-modern-figure" href="#"><img class="img-circles" src="images/incon.jpg" alt="" width="70" height="70" /></a>
                                 </div>
                                 <div class="unit-body">
                                     <h4 class="quote-modern-cite"><a href="#">Catherine Williams</a></h4>
@@ -292,12 +292,10 @@
                             </div>
                             <div class="quote-modern-text">
                                 <p class="q">
-                                    Estou muito animada com a possibilidade de me tornar uma jovem aprendiz no EmpreTec. Como Catherine Williams, estou em busca de uma oportunidade para iniciar minha jornada profissional e acredito que o EmpreTec seja o ambiente ideal para isso. A reputação
-                                    do EmpreTec como uma empresa inovadora e líder no mercado de desenvolvimento de sistemas é algo que me atrai profundamente. Ser parte dessa equipe talentosa e dinâmica seria uma chance incrível de aprender e crescer.
-                                    Como jovem aprendiz, estou ansiosa para absorver conhecimentos práticos e teóricos na área de desenvolvimento de sistemas. Tenho certeza de que o EmpreTec oferecerá um ambiente de trabalho enriquecedor, onde poderei
-                                    aprender com profissionais experientes e aplicar o que aprendi em projetos reais. Estou pronta para assumir responsabilidades, colaborar com a equipe e contribuir para o sucesso do EmpreTec. Tenho uma paixão genuína
-                                    pela tecnologia e estou disposta a dedicar tempo e esforço para aprimorar minhas habilidades. Acredito que o programa de jovem aprendiz do EmpreTec será uma experiência transformadora, proporcionando uma base sólida
-                                    para minha futura carreira profissional. Estou entusiasmada com a perspectiva de fazer parte dessa empresa inspiradora e aproveitar todas as oportunidades que surgirem ao longo do caminho.</p>
+                                    Estou empolgada em ser jovem aprendiz no EmpreTec, líder em desenvolvimento de sistemas. Quero absorver conhecimento,
+                                     crescer e contribuir. 
+                                    Minha paixão pela tecnologia me motiva a dedicar-me, e acredito que essa oportunidade será transformadora.
+                                </p>
                             </div>
                         </article>
                     </div>
@@ -314,11 +312,10 @@
                                 </div>
                             </div>
                             <div class="quote-modern-text">
-                                <p class="q">Estou muito animado em estar cursando "Téc. Serviços Jurídicos". É uma oportunidade incrível para aprimorar meus conhecimentos e habilidades na área jurídica. Ao longo desse curso, estou adquirindo um amplo entendimento
-                                    do direito, aprendendo sobre os procedimentos legais e desenvolvendo habilidades práticas relacionadas aos serviços jurídicos. Estou gostando especialmente das disciplinas que abordam noções de direito civil, direito
-                                    penal e direito administrativo. Também estou aprendendo sobre as práticas e procedimentos necessários para auxiliar profissionais do campo jurídico, o que é muito relevante para uma carreira bem-sucedida como técnico
-                                    em serviços jurídicos. Tenho certeza de que essa formação será um grande diferencial para minha futura carreira. Estou determinado a me destacar nessa área e contribuir para a eficiência dos serviços jurídicos, oferecendo
-                                    suporte e auxílio indispensáveis. Estou ansioso para aplicar todo o conhecimento adquirido durante o curso e, finalmente, ingressar no mercado de trabalho como um profissional qualificado em serviços jurídicos.</p>
+                                <p class="q">
+                                    Estou entusiasmado cursando "Téc. Serviços Jurídicos", adquirindo amplo conhecimento em direito 
+                                    e habilidades práticas. Determinado a destacar-me na área e contribuir para a eficiência dos serviços jurídicos,
+                                     aguardo ansiosamente ingressar no mercado como um profissional qualificado.</p>
                             </div>
                         </article>
                     </div>
@@ -335,13 +332,9 @@
                                 </div>
                             </div>
                             <div class="quote-modern-text">
-                                <p class="q">Estou extremamente empolgado em ter encontrado uma oportunidade de estágio no EmpreTec na área de Desenvolvimento de Sistemas. Como um aspirante a programador, acredito que esta seja uma chance única de aplicar e expandir
-                                    meus conhecimentos práticos enquanto colaboro com uma empresa renomada. O EmpreTec tem uma reputação excepcional no setor de desenvolvimento de sistemas e é conhecido por oferecer soluções inovadoras aos seus clientes.
-                                    Tenho certeza de que, como estagiário, serei exposto a projetos desafiadores e terei a oportunidade de trabalhar em equipe com profissionais experientes. Estou ansioso para mergulhar de cabeça nas tecnologias e linguagens
-                                    de programação utilizadas pelo EmpreTec, e assim, expandir minhas habilidades técnicas. Além disso, estou animado com a possibilidade de aprender sobre boas práticas de desenvolvimento de software, metodologias ágeis
-                                    e aprimorar minhas habilidades de resolução de problemas. Tenho plena consciência de que um estágio no EmpreTec será uma experiência valiosa para o meu crescimento profissional. Estou pronto para me dedicar, aprender
-                                    com a equipe e contribuir para os projetos da empresa. Mal posso esperar para começar essa jornada e adquirir uma base sólida para construir minha carreira no campo do desenvolvimento de sistemas.</p>
-                            </div>
+                                <p class="q">Estou entusiasmado com meu estágio em Desenvolvimento de Sistemas no EmpreTec, pronto para aprender e
+                                     crescer com profissionais experientes. Vou mergulhar nas tecnologias, melhorar minhas habilidades técnicas e
+                                     contribuir para projetos desafiadores, buscando uma base sólida para minha carreira.</p>
                         </article>
                     </div>
                 </div>
