--- a/cadastros.html
+++ b/cadastros.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="sidebar col-md-2 bg-light bg-nav-cad">
-        <a class="navbar-brand" href="#"><b class="logo">Empre</b><b class="log">Tec</b></a></a>
+        <a class="navbar-brand" href="index.html" target="_self"><b class="logo">Empre</b><b class="log">Tec</b></a></a>
         <hr class="featurette-divider ml-3 mr-3">
         <div class="position-sticky">
             <ul class="nav flex-column">
@@ -43,7 +43,6 @@
                     <a class="nav-link" href="#" data-form="table">
                 Editar|Excluir
               </a>
-                </li>
             </ul>
             <div class="footer">
                 <h4 class="text-center text-footer">Todos os Direitos Resevados</h4>
