--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <ul class="isotope-filters-list" id="isotope-3">
                         <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">Todos</a></li>
                         <li><a class="" href="#" data-isotope-filter="Type 1" data-isotope-group="gallery">Desenvolvimento de Sistemas</a></li>
-                        <li><a href="#" data-isotope-filter="Type 2" data-isotope-group="gallery">Emfermagem</a></li>
+                        <li><a href="#" data-isotope-filter="Type 2" data-isotope-group="gallery">Enfermagem</a></li>
                         <li><a href="#" data-isotope-filter="Type 3" data-isotope-group="gallery">Contabilidade</a></li>
                         <li><a href="#" data-isotope-filter="Type 4" data-isotope-group="gallery">Quimica</a></li>
                     </ul>
@@ -141,9 +141,10 @@
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Quimica</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text"><br>É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de química.<br>
+                                    <br>Estamos entusiasmados em oferecer a você a oportunidade de desenvolver suas habilidades e conhecimentos na área de química enquanto colabora conosco em projetos empolgantes.<br></p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -155,7 +156,7 @@
                                 <h5 class="card-title">Desenvolvimento de Sistemas</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -164,10 +165,10 @@
                         <!-- Thumbnail Classic-->
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Emfermagem</h5>
+                                <h5 class="card-title">Enfermagem</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -179,7 +180,7 @@
                                 <h5 class="card-title">Contabilidade</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -191,7 +192,7 @@
                                 <h5 class="card-title">Contabilidade</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -203,7 +204,7 @@
                                 <h5 class="card-title">Desenvolvimento de Sistemas</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -212,10 +213,10 @@
                         <!-- Thumbnail Classic-->
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Emfermagem</h5>
+                                <h5 class="card-title">Enfermagem</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -227,7 +228,7 @@
                                 <h5 class="card-title">Contabilidade</h5>
                                 <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Olhar mais de perto</a>
+                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
