--- a/index.html
+++ b/index.html
@@ -138,11 +138,10 @@
                 <div class="row row-30 isotope" data-isotope-layout="fitRows" data-isotope-group="gallery" data-lightgallery="group">
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 4">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Quimica</h5>
-                                <p class="card-text"><br>É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de química.<br>
-                                    <br>Estamos entusiasmados em oferecer a você a oportunidade de desenvolver suas habilidades e conhecimentos na área de química enquanto colabora conosco em projetos empolgantes.<br></p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de química.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
@@ -151,10 +150,10 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 1" data-wow-delay=".1s">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Desenvolvimento de Sistemas</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Desenvolvimento de Sistemas.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
@@ -163,10 +162,10 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 2" data-wow-delay=".2s">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Enfermagem</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Enfermagem.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
@@ -175,10 +174,10 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 3" data-wow-delay=".3s">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Contabilidade</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Contabilidade.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
@@ -187,10 +186,10 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 3">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Contabilidade</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Contabilidade.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
@@ -199,10 +198,10 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 1" data-wow-delay=".1s">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Desenvolvimento de Sistemas</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Desenvolvimento de Sistemas.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
@@ -211,10 +210,10 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 2" data-wow-delay=".2s">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Enfermagem</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Enfermagem.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
@@ -223,10 +222,10 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeftr" data-filter="Type 3" data-wow-delay=".3s">
                         <!-- Thumbnail Classic-->
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 25rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Contabilidade</h5>
-                                <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                                <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Contabilidade.</p>
                                 <br>
                                 <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
 
