--- a/form-envio-quimica.html
+++ b/form-envio-quimica.html
@@ -123,7 +123,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Estágio em Química</title>
+                <title>Estágio De Química</title>
                 <style>
                     body {
                         font-family: Arial, sans-serif;
@@ -232,10 +232,6 @@
                 <div class="footer-minimal-inset oh">
                     <ul class="footer-list-category-2">
                         <li><a href="https://www.eteclins.com.br/2022/">Etec de Lins</a></li>
-                        <li><a href="#">Windows/Mac OS Apps</a></li>
-                        <li><a href="#">Android/iOS Apps</a></li>
-                        <li><a href="#">Cloud Solutions</a></li>
-                        <li><a href="#">Customer Support</a></li>
                     </ul>
                 </div>
                 <div class="footer-minimal-bottom-panel text-sm-left">
