--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <h5 class="card-title">Quimica</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de química.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-quimica.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                 <h5 class="card-title">Desenvolvimento de Sistemas</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Desenvolvimento de Sistemas.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-ds.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                                 <h5 class="card-title">Enfermagem</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Enfermagem.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-enfermagem.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                                 <h5 class="card-title">Contabilidade</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Contabilidade.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-contabilidade.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                                 <h5 class="card-title">Contabilidade</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Contabilidade.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-contabilidade.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                                 <h5 class="card-title">Desenvolvimento de Sistemas</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Desenvolvimento de Sistemas.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-ds.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -426,10 +426,6 @@
                 <div class="footer-minimal-inset oh">
                     <ul class="footer-list-category-2">
                         <li><a href="https://www.eteclins.com.br/2022/">Etec de Lins</a></li>
-                        <li><a href="#">Windows/Mac OS Apps</a></li>
-                        <li><a href="#">Android/iOS Apps</a></li>
-                        <li><a href="#">Cloud Solutions</a></li>
-                        <li><a href="#">Customer Support</a></li>
                     </ul>
                 </div>
                 <div class="footer-minimal-bottom-panel text-sm-left">
