--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section class="section section-sm section-first bg-default text-center" id="sobre_nos">
             <div class="container">
                 <div class="row row-30 justify-content-center">
-                    <div class="col-md-7 col-lg-5 col-xl-6 text-lg-left wow fadeInUp"><img src="images/Etec-de-Lins.jpg" alt="" width="415" height="592" />
+                   <div class="col-md-7 col-lg-5 col-xl-6 text-lg-left wow fadeInUp"><img src="images/Etec-de-Lins.jpg"  alt="" width="415" height="592" />
                     </div>
                     <div class="col-lg-7 col-xl-6">
                         <div class="row row-30">
@@ -180,7 +180,6 @@
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Contabilidade.</p>
                                 <br>
                                 <a href="form-envio-contabilidade.html" class="card-link btn-empre">Saiba mais</a>
-
                             </div>
                         </div>
                     </div>
@@ -215,7 +214,7 @@
                                 <h5 class="card-title">Enfermagem</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Enfermagem.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-enfermagem.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
@@ -227,7 +226,7 @@
                                 <h5 class="card-title">Contabilidade</h5>
                                 <p class="card-text">É com grande prazer que [Nome da Empresa] convida você a se juntar à nossa equipe como estagiário(a) de Contabilidade.</p>
                                 <br>
-                                <a href="form-envio.html" class="card-link btn-empre">Saiba mais</a>
+                                <a href="form-envio-contabilidade.html" class="card-link btn-empre">Saiba mais</a>
 
                             </div>
                         </div>
