--- a/form-envio-contabilidade.html
+++ b/form-envio-contabilidade.html
@@ -123,7 +123,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Estágio De Contabilidade</title>
+                <title>Estágio De Contábilidade</title>
                 <style>
                     body {
                         font-family: Arial, sans-serif;
@@ -190,7 +190,7 @@
             </head>
             <body>
                 <div class="container">
-                    <h1>Estágio de Desensvolvimento de Sistemas</h1>
+                    <h1>Estágio de Contábilidade </h1>
                     <h2>Localização: [Localização da Empresa]</h2>
                     <h2>Duração: 1 ano e 2 meses</h2>
                     <h2>Remuneração: R$ 2.500 por mês</h2>
