--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 </div>
                 <div class="footer-minimal-bottom-panel text-sm-left">
                     <div class="row row-10 align-items-md-center">
-                        <div class="col-sm-6 col-md-4 text-sm-right text-md-center">
+                        <div class="col-sm-6 col-md-4 text-sm-right text-md-center">dawad
                             <div>
                                 <ul class="list-inline list-inline-sm footer-social-list-2">
                                     <li>
